--- a/create-point.html
+++ b/create-point.html
@@ -27,7 +27,7 @@
         <header>
             <img src="/assets/logo.svg" alt="logo da ecoleta">
 
-            <a href="www.google.com.br">
+            <a href="/">
                 <span></span>
                 Voltar para home
             </a>
@@ -45,18 +45,18 @@
 
                 <div class="field">
                     <label for="name">Nome da Entidade</label>
-                    <input type="text" name="name">
+                    <input type="text" name="name" required>
                 </div>
 
                 <div class="field-group">
                     <div class="field">
                         <label for="adress">Endereço</label>
-                        <input type="text" name="adress">
+                        <input type="text" name="adress" required>
                     </div>
 
                     <div class="field">
                         <label for="adress2">Número/Complemento</label>
-                        <input type="text" name="adress2">
+                        <input type="text" name="adress2" required>
                     </div>
                 </div>
 
@@ -64,14 +64,17 @@
 
                     <div class="field">
                         <label for="stade">Estado</label>
-                        <select name="uf">
+                        <select name="uf" required>
                             <option value="">Selecione o Estado</option>
                         </select>
+
+                        <input type="hidden" name="state">
+
                     </div>
 
                     <div class="field">
                         <label for="city">Cidade</label>
-                        <select name="city" disabled>
+                        <select name="city" required disabled>
                             <option value="">Selecione a Cidade</option>
                         </select>
 
@@ -81,7 +84,47 @@
 
             </fieldset>
 
+            <fieldset>
+                <legend>
+                    <h2>Ítens de Coleta</h2>
+                </legend>
 
+                <div class="items-grid">
+
+                    <li data-id="1" >
+                        <img src="/assets/lampadas.svg" alt="Lampadas">
+                        <span>Lâmpadas</span>
+                    </li>
+
+                    <li data-id="2">
+                        <img src="/assets/baterias.svg" alt="Pilhas e Baterias">
+                        <span>Pilhas e Baterias</span>
+                    </li>
+
+                    <li data-id="3">
+                        <img src="/assets/papeis-papelao.svg" alt="Papeis e Papelão">
+                        <span>Papéis e Papelão</span>
+                    </li>
+
+                    <li data-id="4">
+                        <img src="/assets/eletronicos.svg" alt="Eletronicos">
+                        <span>Resíduos Eletrônicos</span>
+                    </li>
+
+                    <li data-id="5">
+                        <img src="/assets/organicos.svg" alt="Orgânicos">
+                        <span>Resíduos Orgânicos</span>
+                    </li>
+
+                    <li data-id="6">
+                        <img src="/assets/oleo.svg" alt="Óleo de Cozinha">
+                        <span>Óleo de Cozinha</span>
+                    </li>
+
+                </div>
+
+                <input type="hidden" name="items">
+            </fieldset>
 
 
             <button type="submit">Cadastrar Ponto de Coleta</button>
@@ -98,12 +141,11 @@
 
 
 
-
+    <script src="/scripts/create-point.js"></script>
 </body>
 
 </html>
 
 
 <!- se digitar . e enter cria div ->
-<!- se digitar . e digitar field* algum numero ele cria x filds já->
-
+    <!- se digitar . e digitar field* algum numero ele cria x filds já->
